--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  overflow-y: auto;
 }
 
 .new-chat-btn {
@@ -83,6 +82,8 @@ body {
   flex-direction: column;
   gap: 0.5rem;
   margin-top: 1rem;
+  height: 82vh;
+  overflow-y: auto;
 }
 
 .history-item {
@@ -243,4 +244,21 @@ body {
   .sidebar {
     display: none;
   }
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--border-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--bg-primary);
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--accent-primary);
 }
